--- a/index.html
+++ b/index.html
@@ -75,11 +75,23 @@
 
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
     <div class="offcanvas-header">
-      <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+      <h5 class="offcanvas-title" id="offcanvasRightLabel"></h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
     <div class="offcanvas-body">
-      ...
+      
+      <ul class="offcanvList">
+        <h2 class="offcav-heading">Dashboard</h2>
+        <li><a href="">Home</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Service</a></li>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Contact</a></li>
+        <div class="offcanv-button">
+          <button class="offcanv-btn">Contact</button>
+        </div>
+      </ul>
+      
     </div>
   </div>
 
